--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_hooks: ^0.15.0
   built_value: ^8.0.0
   built_collection: ^5.0.0
+  logger: ^0.9.4
 
 dev_dependencies:
   flutter_test:
